API upload file

--- a/config.json
+++ b/config.json
@@ -3,6 +3,12 @@
     "username": "root",
     "password": "123",
     "database_name": "parkings",
-    "address": "localhost:8080"
+    "address": "localhost:3306"
+  },
+  "secret_key": "abcdef123456789",
+  "max_uploaded_file_size": 1000000,
+  "environment": {
+    "hostname": "localhost",
+    "port": "8085"
   }
 }
