--- a/config.json
+++ b/config.json
@@ -3,10 +3,10 @@
     "username": "root",
     "password": "123",
     "database_name": "parkings",
-    "address": "localhost:3306"
+    "address": "119.17.214.120:8881"
   },
   "secret_key": "abcdef123456789",
-  "max_uploaded_file_size": 1000000,
+  "max_uploaded_file_size": 100000,
   "environment": {
     "hostname": "localhost",
     "port": "8085"
