--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "database": {
     "username": "root",
-    "password": "123",
+    "password": "",
     "database_name": "parkings",
-    "address": "localhost:8881"
+    "address": "localhost:3306"
   },
   "secret_key": "abcdef123456789",
   "max_uploaded_file_size": 100000,
