--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "username": "root",
     "password": "123",
     "database_name": "parkings",
-    "address": "localhost:8881"
+    "address": "db:3306"
   },
   "secret_key": "abcdef123456789",
   "max_uploaded_file_size":  100000,
@@ -12,7 +12,7 @@
     "port": "8085"
   },
   "redis": {
-    "address": "localhost:6379",
+    "address": "redis:6379",
     "topic": ["JWT", "DEVICES"],
     "networks": "tcp"
   },
