--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,24 @@ version: '3'
 services:
   db:
     image: mysql:latest
-    container_name: parking_db
+    container_name: database
+    ports:
+      - "6379:6379"
     volumes:
-      - ./resource/migration:/var/lib/mysql
+      - /home/dohuy171/migration:/var/lib/mysql
     networks:
       - backend
   redis:
     image: redis:latest
+    container_name: rds
+    ports:
+      - "6379:6379"
     networks:
       - backend
   api:
     build: .
     ports:
-      - "8124:8085"
+      - "8085:8085"
     networks:
       - backend
     depends_on: #cho db start trc
