--- a/config.json
+++ b/config.json
@@ -3,16 +3,16 @@
     "username": "root",
     "password": "123",
     "database_name": "parkings",
-    "address": "localhost:8881"
+    "address": "database"
   },
   "secret_key": "abcdef123456789",
   "max_uploaded_file_size":  100000,
   "environment": {
-    "hostname": "192.168.137.221",
+    "hostname": "45.118.145.149",
     "port": "8085"
   },
   "redis": {
-    "address": "localhost:6379",
+    "address": "rds",
     "topic": ["JWT", "DEVICES"],
     "networks": "tcp"
   },
