--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,12 @@ services:
     image: mysql:latest
     container_name: database
     ports:
-      - "3306:3306"
+      - "8881:3306"
     volumes:
-      - /home/dohuy171/migration:/var/lib/mysql
+      - ../migration:/var/lib/mysql
     environment:
       MYSQL_DATABASE: parkings
       MYSQL_USER: root
-      MYSQL_PASSWORD: 123
       MYSQL_ROOT_PASSWORD: 123
     networks:
       - backend
@@ -20,7 +19,7 @@ services:
     image: redis:latest
     container_name: rds
     ports:
-      - "6379:6379"
+      - "8882:6379"
     networks:
       - backend
   api:
