fix deploy and migrate db

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "secret_key": "abcdef123456789",
   "max_uploaded_file_size":  100000,
   "environment": {
-    "hostname": "45.118.145.149",
+    "hostname": "localhost",
     "port": "8085"
   },
   "redis": {
