--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,8 @@ services:
   db:
     image: mysql:latest
     container_name: database
-    ports:
-      - "8881:3306"
     volumes:
-      - ../migration:/var/lib/mysql
+      - ./resource/migration:/var/lib/mysql
     environment:
       MYSQL_DATABASE: parkings
       MYSQL_USER: root
@@ -18,8 +16,6 @@ services:
   redis:
     image: redis:latest
     container_name: rds
-    ports:
-      - "8882:6379"
     networks:
       - backend
   api:
