--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   db:
     image: mysql:latest
     container_name: database
+    ports:
+      - "8881:3306"
     volumes:
       - ./resource/migration:/var/lib/mysql
     environment:
@@ -16,12 +18,14 @@ services:
   redis:
     image: redis:latest
     container_name: rds
+    ports:
+      - "8882:6379"
     networks:
       - backend
   api:
     build: .
     ports:
-      - "8085:8085"
+      - "8085:8080"
     networks:
       - backend
     depends_on: #cho db start trc
