--- a/vendor.yml
+++ b/vendor.yml
@@ -1,4 +1,6 @@
 vendors:
+  - path: google.golang.org/grpc
+    rev: c35a580b0c6a62b188ca75cd1ff2666a6bca70c8
   - path: github.com/jinzhu/gorm
     rev: 79a77d771dee4e4b60e9c543e8663bbc80466670
   - path: github.com/gin-gonic/gin
@@ -9,5 +11,5 @@ vendors:
     rev: 09d84710e01a746165eadd36e85d25e0e1923cff
   - path: github.com/gocraft/work
     rev: 61759fb51303000f627b8f5410847bd0996c8d74
-  - path: github.com/firebase/firebase-admin-go
+  - path: firebase.google.com/go
     rev: 32728b0fc9f9486276937d8f50cdf75485c1293c
