--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,2 @@
-FROM haproxytech/haproxy-ubuntu:2.0
-COPY haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
+FROM nginx:latest
+COPY nginx.conf /etc/nginx/conf.d/nginx.conf
